build based on cbc125a

--- a/latest/man/tpSST/index.html
+++ b/latest/man/tpSST/index.html
@@ -231,8 +231,7 @@ D4map = vcat([fnmap(j, gKCCAm, Z0, r1) for j in 1:2]...)
 
 # Figure 4
 
-# _j = &quot;&lt;sub&gt;j&lt;/sub&gt;&quot;
-_j = &quot;ⱼ&quot;
+ _j = &quot;&lt;sub&gt;j&lt;/sub&gt;&quot;
 labela = [&quot;&lt;b&gt;XW&lt;/b&gt;&quot;*_j, &quot;&lt;b&gt;YA&lt;/b&gt;&quot;*_j]
 labelb = [string(&quot;&lt;i&gt;r&lt;/i&gt;(&quot;,labela[1],&quot;, &lt;b&gt;X&lt;/b&gt;)&quot;), string(&quot;&lt;i&gt;r&lt;/i&gt;(&quot;,labela[2],&quot;, &lt;b&gt;Y&lt;/b&gt;)&quot;)]
 labelc = [&quot;Longitude (°E)&quot;, &quot;Latitude (°N)&quot;]
